@@ -1,6 +1,7 @@
 0.02
  - Add missing version to Count and Select.
  - Add tests for Count.
+ - Simplify code of Select.
  - Update copyright years.
 
 0.01 2023-05-26T10:08:28+02:00
